js/js.translator/testData/incremental/invalidation/moveFilesBetweenModules/main/m.kt

fun box() = dex(4, 2)